# agentdesk

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  agentdesk_project_plan.md  alembic.ini  main.py  next_step.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0d2bc7797f83_initial_schema.py  279e9ba0b089_initial_schema.py  4f2bbad603e4_add_email_verified_to_users.py  aeabf2be996f_add_authentication_fields_to_users.py  ffe605bf3565_add_authentication_fields.py
app/: main.py
app/api/: deps.py
app/api/v1/routers/: __init__.py  auth.py  chat.py  conversations.py  health.py  messages.py  tasks.py
app/auth/: dependencies.py  exceptions.py  jwt.py  models.py  password.py  security.py  service.py
app/core/: __init__.py  config.py  logging.py
app/db/: base.py  database.py  session.py  types.py
app/exceptions/: __init__.py
app/llm/: __init__.py  client.py  fake_client.py  openai_client.py
app/middleware/: request_id.py
app/models/: __init__.py  base.py  conversation.py  enums.py  message.py  task.py  user.py
app/prompts/: system.py
app/repositories/: base.py  conversation.py  message.py  task.py  user.py
app/schemas/: auth.py  chat.py  common.py  conversation.py  message.py  task.py  user.py
app/services/: __init__.py  agent.py  conversation.py  exceptions.py  llm.py  task.py  tool_registry.py
app/tools/: __init__.py  calculator.py  tasks_tool.py  weather.py
docs/: auth_chat_ refactor.md  issues to resolve.md  next_step.md  suggested_improvements.md
frontend/: app.js  index.html  style.css
tests/: conftest.py
tests/api/: test_auth_api.py  test_conversations_api.py  test_tasks_api.py
tests/integration/: test_agent_service.py  test_api_integration.py
tests/unit/: test_calculator.py  test_security.py
