[project]
name = "agentdesk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic==1.18.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.117.0",
    "anyio==4.14.2",
    "ast-serialize==0.6.0",
    "async-timeout==5.0.1",
    "asyncpg==0.31.0",
    "backports-asyncio-runner==1.2.0",
    "certifi==2026.6.17",
    "cfgv==3.5.0",
    "click==8.4.2",
    "colorama==0.4.6",
    "coverage==7.15.2",
    "distlib==0.4.3",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "exceptiongroup==1.3.1",
    "fastapi==0.139.2",
    "filelock==3.31.0",
    "greenlet==3.5.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "httpx==0.28.1",
    "identify==2.6.19",
    "idna==3.18",
    "iniconfig==2.3.0",
    "jiter==0.16.0",
    "librt==0.13.0",
    "mako==1.3.12",
    "markupsafe==3.0.3",
    "mypy==2.3.0",
    "mypy-extensions==1.1.0",
    "nodeenv==1.10.0",
    "openai==2.46.0",
    "packaging==26.2",
    "pathspec==1.1.1",
    "platformdirs==4.10.1",
    "pluggy==1.6.0",
    "pre-commit==4.6.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib>=0.3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.2",
    "pygments==2.20.0",
    "pyjwt>=2.13.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "python-discovery==1.4.4",
    "python-dotenv==1.2.2",
    "python-json-logger==4.1.0",
    "python-multipart>=0.0.32",
    "pyyaml==6.0.3",
    "ruff==0.15.22",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.51",
    "starlette==1.3.1",
    "structlog==26.1.0",
    "tomli==2.4.1",
    "tqdm==4.69.0",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.51.0",
    "virtualenv==21.6.1",
    "watchfiles==1.2.0",
    "websockets==16.1.1",
]
